tests/sksl/errors/ReservedNameDvec4.glsl
### Compilation failed:

error: 1: name 'dvec4' is reserved
int dvec4;
    ^^^^^
1 error
